# vecfold

./: Cargo.toml  README.md
doc/: search-index.js
doc/lib/: all.html  index.html  sidebar-items.js  trait.VecFoldResult.html  trait.VecFoldResultBisect.html
doc/src/lib/: lib.rs.html
src/: lib.rs
